[tool.poetry]
name = "moydodyr_api"
version = "0.1.0"
description = ""
authors = ["Ia R1pko <nr1pko35@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
requests = "^2.25.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
beautifulsoup4 = "^4.12.3"
peewee = "^3.17.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"
testfixtures = "^8.2.0"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
