[tool.poetry]
name = "moydodyr_api"
version = "0.0.1"
description = ""
authors = ["Ja R1pko <nr1pko35@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
requests = "^2.25.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
beautifulsoup4 = "^4.12.3"
peewee = "^3.17.5"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
apscheduler = "^3.10.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"
testfixtures = "^8.2.0"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn moydodyr_api.app:app --reload"
